# portfolio

./: .gitignore  README.md
CarInsuranceDataInterface/: CW designs.docx  CarInsuranceDataInterface.sln  README.md  Testing.docx
CarInsuranceDataInterface/CarInsuranceDataInterface/: CarInsuranceDataInterface.csproj  Login.Designer.cs  Login.cs  MainApp.Designer.cs  MainApp.cs  Program.cs  UC_AddCustomer.Designer.cs  UC_AddCustomer.cs  UC_AllCustomers.Designer.cs  UC_AllCustomers.cs  UC_Home.Designer.cs  UC_Home.cs  UC_SearchCustomers.Designer.cs  UC_SearchCustomers.cs  UserDatabaseDataSet.Designer.cs  UserDatabaseDataSet.xsd
CarInsuranceDataInterface/WCFServiceLibrary/: IService1.cs  Service1.cs  WCFServiceLibrary.csproj
DispatchTable/: Design Decisions Report.docx  README.md
DispatchTable/cmake/: CMakeLists.txt  EasyNPC.cpp  EasyNPC.h  Fighter.cpp  Fighter.h  HardNPC.cpp  Main.cpp
DispatchTable/dOxygen/: Doxyfile
DoubleLinkedList/: README.md  Week 11 - Double Linked List.sln  Week 11 - Double Linked List.vcxproj  Week 11 - Double Linked List.vcxproj.filters
DoubleLinkedList/include/: doubleLinkedList.h  doubleLinkedListNode.h
DoubleLinkedList/src/: main.cpp
FlexArray/: CW1.sln  README.docx  README.md
FlexArray/CW1/: CW1.vcxproj  CW1.vcxproj.filters  (+3 more)
MultithreadingMatrix/: CMakeLists.txt  Main.cpp  Multithreading.cpp  Multithreading.h  Processed.csv  README.md
PhysicsEngine/: README.md
SymphonyOfWar/: .editorconfig  README.md  SymphonyOfWar.uproject
TextAdventureGame/: CW2.sln  README.docx  README.md  main.cpp
UnitTestingDemo/: README.md
(+856 files in other folders)
